# a7s-chan

./: README.md  agent.py  behavior.py  config.yaml  main.py  vision.py  voice.py
expressions/: pack.py
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/components/lovyangfx/: CMakeLists.txt
firmware/main/: CMakeLists.txt  audio_pipeline.cpp  audio_pipeline.h  expressions.cpp  expressions.h  face_renderer.cpp  face_renderer.h  face_renderer.h.new  ir_control.cpp  ir_control.h  led_control.cpp  led_control.h  main.cpp  servo_control.cpp  servo_control.h  udp_client.cpp  udp_client.h
stackchan_proto/: __init__.py  protocol.py
tools/: __init__.py  ir_remote.py  screen_display.py  weather.py
