idf_component_register(
    SRCS
        main.cpp
        udp_client.cpp
        face_renderer.cpp
        expressions.cpp
        servo_control.cpp
        ir_control.cpp
        led_control.cpp
        audio_pipeline.cpp
    INCLUDE_DIRS
        .
        ${CMAKE_CURRENT_LIST_DIR}/../components/lovyangfx/LovyanGFX/src
    REQUIRES
        driver
        esp_wifi
        esp_event
        esp_netif
        lwip
        nvs_flash
        mdns
        freertos
        esp_timer
        spi_flash
        newlib
        fatfs
)
